fix koi routes & model & update swagger
