# koicare/models/koi.js
@@ -16,9 +16,9 @@ const getKoiById = (id, callback) => {
 };
 
 // Create koi
-const createKoi = (name, image, body_shape, age, size, weight, gender, breed, origin, selling_price, pond_id, callback) => {
-    // Input validation
-    if (!name || !image || !body_shape || age <= 0 || size <= 0 || weight <= 0 || !gender || !breed || !origin || selling_price <= 0 || pond_id <= 0) {
+const createKoi = (name, image, body_shape, age, size, weight, gender, breed, origin, pond_id, callback) => {
+
+    if (!name || !image || !body_shape || age <= 0 || size <= 0 || weight <= 0 || !gender || !breed || !origin || pond_id <= 0) {
         return callback(new Error('Invalid input data'), null);
     }
     if (!['male', 'female'].includes(gender)) {
@@ -26,9 +26,9 @@ const createKoi = (name, image, body_shape, age, size, weight, gender, breed, or
     }
 
     const query = `
-      INSERT INTO Koi (name, image, body_shape, age, size, weight, gender, breed, origin, selling_price, pond_id)
-      VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);`;
-    db.query(query, [name, image, body_shape, age, size, weight, gender, breed, origin, selling_price, pond_id], (error, results) => {
+      INSERT INTO Koi (name, image, body_shape, age, size, weight, gender, breed, origin, pond_id)
+      VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);`;
+    db.query(query, [name, image, body_shape, age, size, weight, gender, breed, origin, pond_id], (error, results) => {
         if (error) {
             return callback(error, null);
         }
@@ -37,9 +37,9 @@ const createKoi = (name, image, body_shape, age, size, weight, gender, breed, or
 };
 
 // Update pond by ID
-const updateKoiById = (id, name, image, body_shape, age, size, weight, gender, breed, origin, selling_price, pond_id, callback) => {
+const updateKoiById = (id, name, image, body_shape, age, size, weight, gender, breed, origin, pond_id, callback) => {
     
-    if (!name || !image || !body_shape || age <= 0 || size <= 0 || weight <= 0 || !gender || !breed || !origin || selling_price <= 0 || pond_id <= 0) {
+    if (!name || !image || !body_shape || age <= 0 || size <= 0 || weight <= 0 || !gender || !breed || !origin || pond_id <= 0) {
       return callback(new Error('Invalid input data'), null);
     }
     if (!['male', 'female'].includes(gender)) {
@@ -47,9 +47,9 @@ const updateKoiById = (id, name, image, body_shape, age, size, weight, gender, b
     }
   
     const query = `UPDATE Koi
-    SET name = ?, image = ?, body_shape = ?, age = ?, size = ?, weight = ?, gender = ?, breed = ?, origin = ?, selling_price = ?, pond_id = ?
+    SET name = ?, image = ?, body_shape = ?, age = ?, size = ?, weight = ?, gender = ?, breed = ?, origin = ?, pond_id = ?
     WHERE id = ?;`;
-    db.query(query, [name, image, body_shape, age, size, weight, gender, breed, origin, selling_price, pond_id, id], (error, results) => {
+    db.query(query, [name, image, body_shape, age, size, weight, gender, breed, origin, pond_id, id], (error, results) => {
       if (error) {
         return callback(error, null);
       }
